<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VRise</string>
    <string name="title_activity_container_shop">ContainerShop</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_container">Container</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="agent">Agent</string>
    <string name="subscriber">Subscriber</string>
    <string name="please_enter_your_agent_code">Enter Your Agent Code</string>
    <string name="agent_code">Agent Code</string>
    <string name="agent_name">AGENT NAME / AGENCY NAME</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="please_contact_your_agent">Please Contact Your Agent</string>
    <string name="ok">OK</string>
    <string name="title_activity_sub_container">SubContainer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="pay">PAY</string>
    <string name="register">Register</string>
    <string name="avatar">avatar</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_enter_marketing_executive_code">Please Enter Marketing Executive Code</string>
    <string name="Pay_Per_All_Administrator_Will_Contact_You">IBR Administrator Will Contact You</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="route_name">Route Name</string>
    <string name="route_area">Route Area</string>
    <string name="reminder">Reminder</string>
    <string name="billing">Billing</string>
    <string name="profile">Profile</string>
    <string name="due">Due</string>
    <string name="new_subscriber_request">New Subscriber Request</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="rupees">₹</string>
    <string name="logo">payToLogo</string>
    <string name="caps_otp">OTP</string>
    <string name="phone_number_needed">Phone Number Needed</string>
    <string name="home">Home</string>
    <string name="dashboard">DashBoard</string>
    <string name="total_dues_collection">Total Dues Collection</string>
    <string name="add_route">Add Route</string>
    <string name="mobile_subscriber_code_subscriber_name">
        <font size="11">Mobile / Subscriber Code / Subscriber Name</font>
    </string>
    <string name="title_activity_notification_container">NotificationContainer</string>
    <string name="noti_channel_default">Primary Channel</string>
    <string name="noti_channel_second">Secondary Channel</string>
    <string name="subscriber_code">Subscriber Code</string>
    <string name="map_to_route">Map to Route</string>
    <string name="loca">Loca</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="no_subscribers_found">No subscribers found</string>
    <string name="edit_route">Edit Route</string>
    <string name="Thanks_for_Filling_up_the_details_please_contact_your_agent_for_registration_approval">Thanks for
        Filling up the details. Please contact your agent for registration approval
    </string>
    <string name="change">Update</string>
    <string name="notification">notification</string>
    <string name="houses">House Name / Door No</string>
    <string name="title_home">Home</string>
    <string-array name="permissions_to_grant">
        <item>Manifest.permission.ACCESS_NETWORK_STATE</item>
        <item>Manifest.permission.CAMERA</item>
        <item>Manifest.permission.WRITE_EXTERNAL_STORAGE</item>
        <item>Manifest.permission.READ_EXTERNAL_STORAGE</item>
        <item>Manifest.permission.ACCESS_FINE_LOCATION</item>
        
    </string-array>
    <string-array name="drop">
        <item>1 day</item>
        <item>Last 7 days</item>
        <item>Last 14 days</item>
        <item>Last 20 days</item>
        <item>Last 30 days</item>
        <item>Last 60 days</item>
        <item>Last 90 days</item>
        <item>Last 120 days</item>
    </string-array>
    <string name="place_details">Place Details</string>
    <string name="title_activity_shop_main">ShopMainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="section_format">Explore All: %1$d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="nabigation_home" tools:ignore="ExtraTranslation">
        <font size="8">Home</font>
    </string>
    <string name="navigation_cart">
        <font size="8">Cart</font>
    </string>
    <string name="naviagtion_orders">
        <font size="8">My Orders</font>
    </string>
    <string name="navigation_wallet">
        <font size="8">Wallet</font>
    </string>
    <string name="area_locality">Area / Locality / Street</string>
    <string name="pincode">Pincode</string>
    <string name="submit">Submit</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_delivery_address">Change Delivery Address</string>
    <string name="call_customer_care">Call Customer Care</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_vrise_app">Share Viaronline App</string>
</resources>