<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_homess"
        android:title="@string/nabigation_home" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_basket"
        android:title="@string/navigation_cart" />

    <item
        android:id="@+id/myOrderFragment"
        android:icon="@drawable/ic_order"
        android:title="@string/naviagtion_orders" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/navigation_wallet" />

<!--    <item-->
<!--        android:id="@+id/navigation_more"-->
<!--        android:icon="@drawable/ic_dots"-->
<!--        android:title="@string/navigatopnj_more" />-->

</menu>
