<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/ivory">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textView43"
        style="@style/MyTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@drawable/ic_pincodes"
        android:drawableLeft="@drawable/ic_pincodes"
        android:hint="@string/route_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textView44"
        style="@style/MyTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_pincodes"
        android:drawableLeft="@drawable/ic_pincodes"
        android:hint="@string/route_area"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/textView43"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <TextView
        android:id="@+id/textView45"
        style="@style/PrimaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="27dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView46"
        app:layout_constraintStart_toStartOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView46"
        style="@style/PrimaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/save"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="@+id/textView44"
        app:layout_constraintStart_toEndOf="@+id/textView45" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/PrimaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:text="@string/save"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView46"
        app:layout_constraintEnd_toEndOf="@+id/textView44"
        app:layout_constraintStart_toStartOf="@+id/textView46"
        app:layout_constraintTop_toTopOf="@+id/textView46" />


</androidx.constraintlayout.widget.ConstraintLayout>